added in new book and automated book pages

--- a/Site Files/index.html
+++ b/Site Files/index.html
@@ -23,12 +23,12 @@
         <div id="main-content-container">
             <div id="main-book-info" class="front-page-section">
                 <h1 class="book-title">
-                    <img src="/img/D. S. Kogler_ebook.jpg" id="main-book-img">
-                    The Heart of the Radiant
+                    <img src="/img/mind-ebook.jpg" id="main-book-img">
+                    The Mind of the Radiant
                 </h1>
-                <p class="book-tagline">The Radiant Series Begins</p>
+                <p class="book-tagline">The Battle for Doxla Continues</p>
                 <p class="description-text">
-                    Aspiring cadet Jax Ruthoree finds himself traveling with the last survivors of the Light Guard after his home city was decimated by the Undead King Dezeroth and his hordes. Outnumbered and on the run, the group has but one goal: to keep the Heart of the Radiant out of Dezeroth's hands... at any cost.
+                    Five years after the fall of Lord Grandis, Birdie finds her new home under attack by soldiers with magic of impossible strength. Sent by the enigmatic Lux Rosa, these soldiers have but one goal: to destroy Birdie and all that she holds dear.
                 </p>
                 <p><a href="/books/thotr" class="read-more-link">READ MORE</a></p>
             </div>
