--- a/Site Files/footer.html
+++ b/Site Files/footer.html
@@ -2,7 +2,7 @@
 <nav id="footer-nav">
     <ul id="menu-footer-menu">
         <li class="menu-footer-item"><a href="/index">Home</a></li>
-        <li class="menu-footer-item"><a href="/books/thotr">Books</a></li>
+        <li class="menu-footer-item"><a href="/books.html">Books</a></li>
         <li class='menu-header-item'><a href="/future-pubs">Future Titles</a></li>
         <li class="menu-footer-item"><a href="/about">Author</a></li>
         <li class="menu-footer-item"><a href="/newsletter">Newsletter</a></li>
