--- a/Site Files/future-pubs.html
+++ b/Site Files/future-pubs.html
@@ -22,27 +22,12 @@
         <div id="main-content-container">
             <div id="future-book-list">
                 <h1 class="book-title">
-                    The Mind of the Radiant
-                </h1>
-                <p class="description-text">
-                    Five years after the events of The Heart of the Radiant, follow Birdie on her journey to the city
-                    of the Divine, Ars Summis. A new Radiant known as Lux Rosa has appeared, and through her
-                    machinations she has begun to tap into the power of the Masters.
-                    <br>
-                    <br>
-                    It is now a race against time as Birdie seeks to contact the only true Divine who could
-                    help them against this menace. Failure means Lux Rosa obtains absolute control over the world.
-                    Success... means the battle for Doxla is only beginning.
-                </p>
-                <hr>
-                <h1 class="book-title">
                     The Soul of the Radiant
                 </h1>
                 <p class="description-text">
-                    In this third installment of the Radiant series, follow Ev as the world itself is torn asunder when
-                    the fabled Masters return to bury their darkest secrets. Enemies will become allies
-                    or perish as forces from beyond the world of Doxla seek to put an end to all that threatens the
-                    Masters' multiversal reign.
+                    In this third and final installment of the Radiant series, follow Ev as her destiny is forced down two opposing paths 
+                    when the Masters return to preserve their eternal reign. Will she join the Masters to spare the lives of innocents and
+                    reclaim her promised soul, or will she risk her own existence for the slim chance at ending the Masters' machinations once and for all.
                     <br>
                     <br>
                     Journey beyond the boundaries of Doxla in this climactic finish to the series in a battle
