--- a/Site Files/header.html
+++ b/Site Files/header.html
@@ -17,7 +17,7 @@
     <nav id="site-navigation" class="main-navigation">
         <ul id="menu-header-menu">
             <li class='menu-header-item'><a href="/index">Home</a></li>
-            <li class='menu-header-item'><a href="/books/thotr">Books</a></li>
+            <li class='menu-header-item'><a href="/books.html">Books</a></li>
             <li class='menu-header-item'><a href="/future-pubs">Future Titles</a></li>
             <li class='menu-header-item'><a href="/about">Author</a></li>
             <li class='menu-header-item'><a href="/newsletter">Newsletter</a></li>
