automation alternates book list sides

--- a/Site Files/books.html
+++ b/Site Files/books.html
@@ -28,5 +28,5 @@
     </div>
 </body>
 <script>
-    setupBookList("#main-content-container", "Radiant");
+    setupBookListAlt("#main-content-container", "Radiant");
 </script>
