--- a/Site Files/future-pubs.html
+++ b/Site Files/future-pubs.html
@@ -25,9 +25,7 @@
                     The Soul of the Radiant
                 </h1>
                 <p class="description-text">
-                    In this third and final installment of the Radiant series, follow Ev as her destiny is forced down two opposing paths 
-                    when the Masters return to preserve their eternal reign. Will she join the Masters to spare the lives of innocents and
-                    reclaim her promised soul, or will she risk her own existence for the slim chance at ending the Masters' machinations once and for all.
+                    In this third and final installment of the Radiant series, follow Ev as her destiny is forced down two opposing paths when the Masters return to fulfill their plans for Doxla. Will she join the Masters against the growing threat of the reality-bending anthermancers, or will she risk her own existence for the slim chance at ending the Masters' machinations once and for all.
                     <br>
                     <br>
                     Journey beyond the boundaries of Doxla in this climactic finish to the series in a battle
