updated images, blurbs, and future titles

--- a/Site Files/future-pubs.html
+++ b/Site Files/future-pubs.html
@@ -25,25 +25,20 @@
                     The Soul of the Radiant
                 </h1>
                 <p class="description-text">
-                    In this third and final installment of the Radiant series, follow Ev as her destiny is forced down two opposing paths when the Masters return to fulfill their plans for Doxla. Will she join the Masters against the growing threat of the reality-bending anthermancers, or will she risk her own existence for the slim chance at ending the Masters' machinations once and for all.
+                    In this third and final installment of the Radiant series, follow Ev as her destiny is forced down two opposing paths when the Masters at last return. Will she join the Masters in their goals in order to protect Doxla from inevitable oblivion, or will she risk her very existence for the slim chance at ending the Masters' machinations once and for all?
                     <br>
                     <br>
-                    Journey beyond the boundaries of Doxla in this climactic finish to the series in a battle
-                    that will truly decide the fate of the world... and potentially the fate of many others. 
+                    Journey beyond the boundaries of Doxla in this climactic finish to the series, where at last everything is revealed. 
                 </p>
                 <hr>
                 <h1 class="book-title">
                     The Armonia Series
                 </h1>
                 <p class="description-text">
-                    The Armonia series will primarily follow Lapis Kaghani in her journey across the world in a quest
-                    to bring about a cure for the Blight. For millennia, this supernatural plague has slowly but unyieldingly spread
-                    across the land, corrupting mind, body, and even matter itself. 
+                    The Armonia series will primarily follow Lapis Kaghani in her journey across the world in a quest to bring about a cure for the Blight. For millennia, this supernatural plague has slowly but unyieldingly spread across the land, corrupting mind, body, and even matter itself. 
                     <br>
                     <br>
-                    To succeed in her journey, Lapis will need to overcome longstanding
-                    animosity between the eight races of the world. Little will she realize that her journey serves 
-                    another purpose, as a plan decades in the making unfolds around her.
+                    To succeed in her journey, Lapis will need to overcome longstanding animosity between the eight races of the world. Little will she realize that her journey serves another purpose, as a plan decades in the making unfolds around her.
                 </p>
             </div>
         </div>
