restructured and updated website; also added in new book info

--- a/Site Files/header.html
+++ b/Site Files/header.html
@@ -1,26 +1,23 @@
-<link rel="stylesheet" type="text/css" href="/css/header.css">
+<link rel="stylesheet" type="text/css" href="/css/header.css" />
 <div id="masthead">
-    <header id="mainhead">
-        <div id="site-branding">
-            <div id="logo-container" class="header-block">
-                <!--
-                <a href="index.html" id="custom-logo-link" rel="home">
-                    <img src="img/Logo 2 square.png" id="custom-logo">
-                </a>
-                -->
-                <img src="/img/Logo 2 square.png" id="custom-logo">
-            </div>
-            <span id="main-title" class='header-block'> D. S. KOGLER BOOKS</span>
+  <header id="mainhead">
+    <a href="index.html" id="custom-logo-link" rel="home">
+      <div id="site-branding">
+        <div id="logo-container" class="header-block">
+          <img src="/img/Logo 2 square.png" id="custom-logo" />
         </div>
-        
-    </header>
-    <nav id="site-navigation" class="main-navigation">
-        <ul id="menu-header-menu">
-            <li class='menu-header-item'><a href="/index">Home</a></li>
-            <li class='menu-header-item'><a href="/books.html">Books</a></li>
-            <li class='menu-header-item'><a href="/future-pubs">Future Titles</a></li>
-            <li class='menu-header-item'><a href="/about">Author</a></li>
-            <li class='menu-header-item'><a href="/newsletter">Newsletter</a></li>
-        </ul>
-    </nav>
+
+        <span id="main-title" class="header-block"> D. S. KOGLER BOOKS</span>
+      </div>
+    </a>
+  </header>
+  <nav id="site-navigation" class="main-navigation">
+    <ul id="menu-header-menu">
+      <li class="menu-header-item"><a href="/index">Home</a></li>
+      <li class="menu-header-item"><a href="/books.html">Books</a></li>
+      <li class="menu-header-item"><a href="/future-pubs">Future Titles</a></li>
+      <li class="menu-header-item"><a href="/about">Author</a></li>
+      <li class="menu-header-item"><a href="/newsletter">Newsletter</a></li>
+    </ul>
+  </nav>
 </div>
