--- a/Site Files/index.html
+++ b/Site Files/index.html
@@ -47,17 +47,5 @@
     </div>
 </body>
 <script>
-    setupHome("#main-book-info", "Radiant", "The Mind of the Radiant");
+    setupHome("#main-book-info", "Radiant", "The Soul of the Radiant");
 </script>
-
-<!--
-                <h1 class="book-title">
-                    <img src="/img/mind-ebook.jpg" class="main-book-img">
-                    The Mind of the Radiant
-                </h1>
-                <p class="book-tagline">The Battle for Doxla Continues</p>
-                <p class="description-text">
-                    Five years after the fall of Lord Grandis, Birdie finds her new home under attack by soldiers with magic of impossible strength. Sent by the enigmatic Lux Rosa, these soldiers have but one goal: to destroy Birdie and all that she holds dear.
-                </p>
-                <p><a href="/books/thotr" class="read-more-link">READ MORE</a></p>
--->
