--- a/Site Files/about.html
+++ b/Site Files/about.html
@@ -1,48 +1,54 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" type="text/css" href="/css/main.css">
-    <link rel="stylesheet" type="text/css" href="/css/about.css">
-    <link rel="shortcut icon" href="/img/Logo 2 square.png">
-    <title>D. S. Kogler Books - Author Bio</title>
+  <link rel="stylesheet" type="text/css" href="/css/main.css" />
+  <link rel="stylesheet" type="text/css" href="/css/about.css" />
+  <link rel="shortcut icon" href="/img/Logo 2 square.png" />
+  <title>D. S. Kogler Books - Author Bio</title>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-    <script> 
-        $(function(){
-        $("#header").load("/header.html"); 
-        $("#footer").load("/footer.html"); 
-        });
-    </script>
+  <script>
+    $(function () {
+      $("#header").load("/header.html");
+      $("#footer").load("/footer.html");
+    });
+  </script>
 </head>
 <body>
-    <div id="page">
-        <div id="header"></div>
-        
-        <div id="main-content-container">
-            <div id="bio-info">
-                <h1>
-                    <img src="/img/bio image.jpg" id="bio-img">
-                    Daniel Kogler
-                </h1>
-                
-                <p class="description-text">
-                    Back in his undergraduate days while studying electrical engineering, Daniel attempted to write his first book. 
-                    This attempt has been lost to the archives and will never see the light of day. His dream of writing never went away,
-                    however, and after marrying his wonderful wife, he tried twice again in graduate school. 
-                    <br>
-                    <br>
-                    One of those attempts will also forever be locked away, but the other was his first attempt at the Armonia series. 
-                    For a number of reasons (including being busy publishing his dissertation), the Armonia series was temporarily shelved.
-                    The experience was an educational one, however, and in February 2020, Daniel published his first full-length novel, 
-                    which blended his love of fantasy and video games into a single world.
-                    <br>
-                    <br>
-                    He plans for this novel to be the first of many, and hopes that others will find his books engaging and enjoyable. 
-                </p>
+  <div id="page">
+    <div id="header"></div>
 
-            </div>
-        </div>
+    <div id="main-content-container">
+      <div id="bio-info">
+        <h1>
+          <img src="/img/bio image.jpg" id="bio-img" />
+          Daniel Kogler
+        </h1>
 
-        <div id="footer"></div>
+        <p class="description-text">
+          Back in his undergraduate days while studying electrical engineering,
+          Daniel attempted to write his first book. This attempt has been lost
+          to the archives and will never see the light of day. His dream of
+          writing never went away, however, and after marrying his wonderful
+          wife, he tried twice again in graduate school.
+          <br />
+          <br />
+          One of those attempts will also forever be locked away, but the other
+          was his first attempt at the Armonia series. For a number of reasons
+          (including being busy publishing his dissertation), the Armonia series
+          was temporarily shelved. The experience was an educational one,
+          however, and in February 2020, Daniel published his first full-length
+          novel, which blended his love of fantasy and video games into a single
+          world.
+          <br />
+          <br />
+          In August 2022, Daniel published the final book of the Radiant
+          trilogy, and he hopes that others will find both these books and
+          future titles engaging and enjoyable.
+        </p>
+      </div>
     </div>
+
+    <div id="footer"></div>
+  </div>
 </body>
