--- a/Site Files/future-pubs.html
+++ b/Site Files/future-pubs.html
@@ -1,48 +1,61 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" type="text/css" href="/css/main.css">
-    <link rel="stylesheet" type="text/css" href="/css/future-pubs.css">
-    <link rel="shortcut icon" href="/img/Logo 2 square.png">
-    <title>D. S. Kogler Books - Future Titles</title>
-    
+  <link rel="stylesheet" type="text/css" href="/css/main.css" />
+  <link rel="stylesheet" type="text/css" href="/css/future-pubs.css" />
+  <link rel="shortcut icon" href="/img/Logo 2 square.png" />
+  <title>D. S. Kogler Books - Future Titles</title>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-    <script> 
-        $(function(){
-        $("#header").load("/header.html"); 
-        $("#footer").load("/footer.html"); 
-        });
-    </script>
+  <script>
+    $(function () {
+      $("#header").load("/header.html");
+      $("#footer").load("/footer.html");
+    });
+  </script>
 </head>
 <body>
-    <div id="page">
-        <div id="header"></div>
-        
-        <div id="main-content-container">
-            <div id="future-book-list">
-                <h1 class="book-title">
-                    The Soul of the Radiant
-                </h1>
-                <p class="description-text">
-                    In this third and final installment of the Radiant series, follow Ev as her destiny is forced down two opposing paths when the Masters at last return. Will she join the Masters in their goals in order to protect Doxla from inevitable oblivion, or will she risk her very existence for the slim chance at ending the Masters' machinations once and for all?
-                    <br>
-                    <br>
-                    Journey beyond the boundaries of Doxla in this climactic finish to the series, where at last everything is revealed. 
-                </p>
-                <hr>
-                <h1 class="book-title">
-                    The Armonia Series
-                </h1>
-                <p class="description-text">
-                    The Armonia series will primarily follow Lapis Kaghani in her journey across the world in a quest to bring about a cure for the Blight. For millennia, this supernatural plague has slowly but unyieldingly spread across the land, corrupting mind, body, and even matter itself. 
-                    <br>
-                    <br>
-                    To succeed in her journey, Lapis will need to overcome longstanding animosity between the eight races of the world. Little will she realize that her journey serves another purpose, as a plan decades in the making unfolds around her.
-                </p>
-            </div>
-        </div>
+  <div id="page">
+    <div id="header"></div>
 
-        <div id="footer"></div>
+    <div id="main-content-container">
+      <div id="future-book-list">
+        <h1 class="book-title">
+          The Witch of World's End: The Book of Prophecy
+        </h1>
+        <p class="description-text">
+          The first book of The Witch of World's End series follows a prideful
+          young witch named Lyn after she learns of the titular Book of
+          Prophecies and the royal order of heroes training to rid the kingdom
+          of witchcraft. Though little is known of the contents of the book, it
+          is clear that it's by the book's direction that the crown has
+          redoubled its efforts to snuff out dark magic.
+          <br />
+          <br />
+          Accompanied by her adoptive sister Zahra and a mysterious thief named
+          Faux, Lyn must find a way to infiltrate the order of heroes and claim
+          the bothersome book for herself. It could just prove to be the edge
+          witches need to finally fight back against the royal family. Then
+          again, the secrets within might just be enough to make Lyn question
+          her own hopes and ambitions.
+        </p>
+        <hr />
+        <h1 class="book-title">The Armonia Series</h1>
+        <p class="description-text">
+          The Armonia series will primarily follow Lapis Kaghani in her journey
+          across the world in a quest to bring about a cure for the Blight. For
+          millennia, this supernatural plague has slowly but unyieldingly spread
+          across the land, corrupting mind, body, and even matter itself.
+          <br />
+          <br />
+          To succeed in her journey, Lapis will need to overcome longstanding
+          animosity between the eight races of the world. Little will she
+          realize that her journey serves another purpose, as a plan decades in
+          the making unfolds around her.
+        </p>
+      </div>
     </div>
+
+    <div id="footer"></div>
+  </div>
 </body>
