fixed link issue to home page

--- a/Site Files/header.html
+++ b/Site Files/header.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" type="text/css" href="/css/header.css" />
 <div id="masthead">
   <header id="mainhead">
-    <a href="index.html" id="custom-logo-link" rel="home">
+    <a href="/index.html" id="custom-logo-link" rel="home">
       <div id="site-branding">
         <div id="logo-container" class="header-block">
           <img src="/img/Logo 2 square.png" id="custom-logo" />
