subcomponent section is now complete

--- a/Site Files/hic/data.html
+++ b/Site Files/hic/data.html
@@ -170,7 +170,7 @@
           </div>
 
           <div class="data-row" id="shared-personality-row">
-            Shared Personality Spectrum
+            Shared Personality Degree
             <input
               type="text"
               class="spectrum-entry"
@@ -277,7 +277,7 @@
               id="sub-id-dropdown"
               name="sub-id-dropdown"
             ></select>
-            </div>
+          </div>
           <div class="data-row" id="sub-wup-con-row">
             Will Up Conn.
             <select
