sibling data now autofills

--- a/Site Files/hic/data.html
+++ b/Site Files/hic/data.html
@@ -236,7 +236,144 @@
       <!--The sibling data section-->
       <div class="data-section" id="sibling">
         <div class="collapse-trigger" id="sibling-collapse">Sibling Data</div>
-        <div class="collapsible" id="sibling-data"></div>
+        <div class="collapsible" id="sibling-data">
+          <div class="data-row sib-data-row" id="sib-id-row">
+            Component ID
+            <select
+              class="id-dropdown"
+              id="sib-id-dropdown"
+              name="sib-id-dropdown"
+            ></select>
+          </div>
+          <div class="data-row sib-data-row" id="sib-assim-dir-row">
+            Assimiliation Direction
+            <select
+              class="option-dropdown exchange-dropdown"
+              name="sib-assim-dir-dropdown"
+              id="sib-assim-dir-dropdown"
+            >
+              <option value="None" id="sib-assim-dir-none">None</option>
+              <option value="Open" id="sib-assim-dir-open">Open</option>
+              <option value="Up" id="sib-assim-dir-up">Up</option>
+              <option value="Down" id="sib-assim-dir-down">Down</option>
+            </select>
+          </div>
+          <div class="data-row sib-data-row" id="sib-xchng-dir-row">
+            Comp. Exchange Direction
+            <select
+              class="option-dropdown exchange-dropdown"
+              name="sib-xchng-dir-dropdown"
+              id="sib-xchng-dir-dropdown"
+            >
+              <option value="None" id="sib-xchng-dir-none">None</option>
+              <option value="Open" id="sib-xchng-dir-open">Open</option>
+              <option value="Up" id="sib-xchng-dir-up">Up</option>
+              <option value="Down" id="sib-xchng-dir-down">Down</option>
+            </select>
+          </div>
+          <div class="data-row sib-data-row" id="sib-wup-con-row">
+            Will Up Conn.
+            <select
+              class="option-dropdown connection-dropdown"
+              name="sib-wup-con-dropdown"
+              id="sib-wup-con-dropdown"
+            ></select>
+          </div>
+          <div class="data-row sib-data-row" id="sib-wup-degree-row">
+            Will Up Degree
+            <input
+              type="text"
+              class="spectrum-entry"
+              id="sib-wup-degree-entry"
+              name="sib-wup-degree-entry"
+            />
+          </div>
+          <div class="data-row sib-data-row" id="sib-wdown-con-row">
+            Will Down Conn.
+            <select
+              class="option-dropdown connection-dropdown"
+              name="sib-wdown-con-dropdown"
+              id="sib-wdown-con-dropdown"
+            ></select>
+          </div>
+          <div class="data-row sib-data-row" id="sib-wdown-degree-row">
+            Will Down Degree
+            <input
+              type="text"
+              class="spectrum-entry"
+              id="sib-wdown-degree-entry"
+              name="sib-wdown-degree-entry"
+            />
+          </div>
+          <div class="data-row sib-data-row" id="sib-kup-con-row">
+            Knowledge Up Conn.
+            <select
+              class="option-dropdown connection-dropdown"
+              name="sib-kup-con-dropdown"
+              id="sib-kup-con-dropdown"
+            ></select>
+          </div>
+          <div class="data-row sib-data-row" id="sib-kup-degree-row">
+            Knowledge Up Degree
+            <input
+              type="text"
+              class="spectrum-entry"
+              id="sib-kup-degree-entry"
+              name="sib-kup-degree-entry"
+            />
+          </div>
+          <div class="data-row sib-data-row" id="sib-kdown-con-row">
+            Knowledge Down Conn.
+            <select
+              class="option-dropdown connection-dropdown"
+              name="sib-kdown-con-dropdown"
+              id="sib-kdown-con-dropdown"
+            ></select>
+          </div>
+          <div class="data-row sib-data-row" id="sib-kdown-degree-row">
+            Knowledge Down Degree
+            <input
+              type="text"
+              class="spectrum-entry"
+              id="sib-kdown-degree-entry"
+              name="sib-kdown-degree-entry"
+            />
+          </div>
+          <div class="data-row sib-data-row" id="sib-pup-con-row">
+            Personality Up Conn.
+            <select
+              class="option-dropdown connection-dropdown"
+              name="sib-pup-con-dropdown"
+              id="sib-pup-con-dropdown"
+            ></select>
+          </div>
+          <div class="data-row sib-data-row" id="sib-pup-degree-row">
+            Personality Up Degree
+            <input
+              type="text"
+              class="spectrum-entry"
+              id="sib-pup-degree-entry"
+              name="sib-pup-degree-entry"
+            />
+          </div>
+          <div class="data-row sib-data-row" id="sib-pdown-con-row">
+            Personality Down Conn.
+            <select
+              class="option-dropdown connection-dropdown"
+              name="sib-pdown-con-dropdown"
+              id="sib-pdown-con-dropdown"
+            ></select>
+          </div>
+          <div class="data-row sib-data-row" id="sib-pdown-degree-row">
+            Personality Down Degree
+            <input
+              type="text"
+              class="spectrum-entry"
+              id="sib-pdown-degree-entry"
+              name="sib-pdown-degree-entry"
+            />
+          </div>
+        </div>
       </div>
     </div>
     <div class="full-data-section" id="subcomponent-full-data-section">
