fixed some issues and got changing siblings to work (also removed some cleanup because of issues)

--- a/Site Files/hic/data.html
+++ b/Site Files/hic/data.html
@@ -246,7 +246,7 @@
             ></select>
           </div>
           <div class="data-row sib-data-row" id="sib-assim-dir-row">
-            Assimiliation Direction
+            Assimilation Direction
             <select
               class="option-dropdown exchange-dropdown"
               name="sib-assim-dir-dropdown"
@@ -283,7 +283,7 @@
             Will Up Degree
             <input
               type="text"
-              class="spectrum-entry"
+              class="spectrum-entry sib-spectrum-entry"
               id="sib-wup-degree-entry"
               name="sib-wup-degree-entry"
             />
@@ -300,7 +300,7 @@
             Will Down Degree
             <input
               type="text"
-              class="spectrum-entry"
+              class="spectrum-entry sib-spectrum-entry"
               id="sib-wdown-degree-entry"
               name="sib-wdown-degree-entry"
             />
@@ -317,7 +317,7 @@
             Knowledge Up Degree
             <input
               type="text"
-              class="spectrum-entry"
+              class="spectrum-entry sib-spectrum-entry"
               id="sib-kup-degree-entry"
               name="sib-kup-degree-entry"
             />
@@ -334,7 +334,7 @@
             Knowledge Down Degree
             <input
               type="text"
-              class="spectrum-entry"
+              class="spectrum-entry sib-spectrum-entry"
               id="sib-kdown-degree-entry"
               name="sib-kdown-degree-entry"
             />
@@ -351,7 +351,7 @@
             Personality Up Degree
             <input
               type="text"
-              class="spectrum-entry"
+              class="spectrum-entry sib-spectrum-entry"
               id="sib-pup-degree-entry"
               name="sib-pup-degree-entry"
             />
@@ -368,7 +368,7 @@
             Personality Down Degree
             <input
               type="text"
-              class="spectrum-entry"
+              class="spectrum-entry sib-spectrum-entry"
               id="sib-pdown-degree-entry"
               name="sib-pdown-degree-entry"
             />
@@ -407,7 +407,7 @@
           Subcomponent Data
         </div>
         <div class="collapsible" id="subcomponent-data">
-          <div class="data-row" id="sub-id-row">
+          <div class="data-row sub-data-row" id="sub-id-row">
             Component ID
             <select
               class="id-dropdown"
@@ -415,7 +415,7 @@
               name="sub-id-dropdown"
             ></select>
           </div>
-          <div class="data-row" id="sub-wup-con-row">
+          <div class="data-row sub-data-row" id="sub-wup-con-row">
             Will Up Conn.
             <select
               class="option-dropdown connection-dropdown"
@@ -423,7 +423,7 @@
               id="sub-wup-con-dropdown"
             ></select>
           </div>
-          <div class="data-row" id="sub-wup-degree-row">
+          <div class="data-row sub-data-row" id="sub-wup-degree-row">
             Will Up Degree
             <input
               type="text"
@@ -432,7 +432,7 @@
               name="sub-wup-degree-entry"
             />
           </div>
-          <div class="data-row" id="sub-wdown-con-row">
+          <div class="data-row sub-data-row" id="sub-wdown-con-row">
             Will Down Conn.
             <select
               class="option-dropdown connection-dropdown"
@@ -440,7 +440,7 @@
               id="sub-wdown-con-dropdown"
             ></select>
           </div>
-          <div class="data-row" id="sub-wdown-degree-row">
+          <div class="data-row sub-data-row" id="sub-wdown-degree-row">
             Will Down Degree
             <input
               type="text"
@@ -449,7 +449,7 @@
               name="sub-wdown-degree-entry"
             />
           </div>
-          <div class="data-row" id="sub-kup-con-row">
+          <div class="data-row sub-data-row" id="sub-kup-con-row">
             Knowledge Up Conn.
             <select
               class="option-dropdown connection-dropdown"
@@ -457,7 +457,7 @@
               id="sub-kup-con-dropdown"
             ></select>
           </div>
-          <div class="data-row" id="sub-kup-degree-row">
+          <div class="data-row sub-data-row" id="sub-kup-degree-row">
             Knowledge Up Degree
             <input
               type="text"
@@ -466,7 +466,7 @@
               name="sub-kup-degree-entry"
             />
           </div>
-          <div class="data-row" id="sub-kdown-con-row">
+          <div class="data-row sub-data-row" id="sub-kdown-con-row">
             Knowledge Down Conn.
             <select
               class="option-dropdown connection-dropdown"
@@ -474,7 +474,7 @@
               id="sub-kdown-con-dropdown"
             ></select>
           </div>
-          <div class="data-row" id="sub-kdown-degree-row">
+          <div class="data-row sub-data-row" id="sub-kdown-degree-row">
             Knowledge Down Degree
             <input
               type="text"
@@ -483,7 +483,7 @@
               name="sub-kdown-degree-entry"
             />
           </div>
-          <div class="data-row" id="sub-pup-con-row">
+          <div class="data-row sub-data-row" id="sub-pup-con-row">
             Personality Up Conn.
             <select
               class="option-dropdown connection-dropdown"
@@ -491,7 +491,7 @@
               id="sub-pup-con-dropdown"
             ></select>
           </div>
-          <div class="data-row" id="sub-pup-degree-row">
+          <div class="data-row sub-data-row" id="sub-pup-degree-row">
             Personality Up Degree
             <input
               type="text"
@@ -500,7 +500,7 @@
               name="sub-pup-degree-entry"
             />
           </div>
-          <div class="data-row" id="sub-pdown-con-row">
+          <div class="data-row sub-data-row" id="sub-pdown-con-row">
             Personality Down Conn.
             <select
               class="option-dropdown connection-dropdown"
@@ -508,7 +508,7 @@
               id="sub-pdown-con-dropdown"
             ></select>
           </div>
-          <div class="data-row" id="sub-pdown-degree-row">
+          <div class="data-row sub-data-row" id="sub-pdown-degree-row">
             Personality Down Degree
             <input
               type="text"
@@ -517,7 +517,7 @@
               name="sub-pdown-degree-entry"
             />
           </div>
-          <div class="data-row" id="sub-nature-row">
+          <div class="data-row sub-data-row" id="sub-nature-row">
             Nature
             <select
               class="option-dropdown"
